feat: embedd spotifyd as child process
This uses a spotifyd fork which can be authenticated by a oauth access
token. The spotifyd instance can be restarted via the api and the
frontend.
