# packages/backend/src/controllers/system.ts
@@ -1,3 +1,4 @@
+import { SpotifydService } from '../services/spotifyd';
 import SystemService from '../services/system';
 import express from 'express';
 
@@ -5,9 +6,14 @@ export default class SystemController {
   public path = '/system';
   public router = express.Router();
 
+  private spotifydService: SpotifydService;
   private systemService: SystemService;
 
-  public constructor(systemService: SystemService) {
+  public constructor(
+    spotifydService: SpotifydService,
+    systemService: SystemService
+  ) {
+    this.spotifydService = spotifydService;
     this.systemService = systemService;
 
     this.initializeRoutes();
@@ -15,6 +21,8 @@ export default class SystemController {
 
   public initializeRoutes(): void {
     this.router.get(`${this.path}/status`, this.getStatus);
+    this.router.get(`${this.path}/spotifyd/status`, this.getSpotifydStatus);
+    this.router.post(`${this.path}/spotifyd/restart`, this.restartSpotifyd);
   }
 
   private getStatus = async (
@@ -24,5 +32,21 @@ export default class SystemController {
     response.send({
       ready: this.systemService.isReady(),
     });
+  };
+
+  private getSpotifydStatus = async (
+    _: express.Request,
+    response: express.Response
+  ) => {
+    response.send(this.spotifydService.getStatus());
+  };
+
+  private restartSpotifyd = async (
+    _: express.Request,
+    response: express.Response
+  ) => {
+    this.spotifydService.stop();
+    this.spotifydService.start();
+    response.sendStatus(204);
   };
 }
